# 3D-Model-Viewer

./: CMakeLists.txt  README.md
include/: Common.h  Environment.h  GUI.h  Object.h  PolygonMesh.h  Utilities.h
include/lib/tiny-file-dialogs/: tinyfiledialogs.h
shaders/: BoundingBox.frag  BoundingBox.vert  Object.frag  Object.vert
src/: CMakeLists.txt  Environment.cpp  GUI.cpp  Main.cpp  Object.cpp  PolygonMesh.cpp
src/lib/tiny-file-dialogs/: tinyfiledialogs.c
